--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--  Copyright Jari Honkanen -->
 <head>
 	<title>An example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
