mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!--  Copyright Jari Honkanen -->
+<!--  Copyright Jari Honkanen 
+	   Adding changes before rebase conflics -->
+
 <head>
 	<title>An example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
