adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  Copyright Jari Honkanen 
-	   Adding changes before rebase conflics -->
+	   These changes are for bigtrouble -->
 
 <head>
 	<title>An example website</title>
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some random text here
+			Just nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
