mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  Copyright Jari Honkanen 
-	   Adding changes before rebase conflics -->
+	   Some silly changes from master -->
 
 <head>
 	<title>An example website</title>
@@ -15,9 +15,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Silly Content Goes Here -->
 		<p>
-			Just some random text here
+			Just some stupid text here
 		</p>
 	</main>
 	<footer class="container">
