local: updating simple.html copyright

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jariware 2014</p>
+		<p>&copy; Jariware 2020, All rights reserved</p>
 	</footer>
 </body>
 </html>
