--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	   These changes are for bigtrouble -->
 
 <head>
-	<title>An example website</title>
+	<title>An example website (stash Example)</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
